--- a/src/styles/Link.module.scss
+++ b/src/styles/Link.module.scss
@@ -7,6 +7,7 @@
   letter-spacing: 2.28571px;
   height: rem(36px);
   border-bottom: 2px solid color(eucalyptus);
+  cursor: pointer;
   &:any-link {
     color: transparent;
     background: {
